// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordActionsPopupContent Component renders correctly with compact variant 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb iDfhNX"
    variant="compact"
  >
    <div
      class="sc-gtLWhw eVjNgn"
      variant="compact"
    >
      <svg
        data-testid="edit-icon"
      />
      <p>
        Edit
      </p>
    </div>
    <div
      class="sc-gtLWhw eVjNgn"
      variant="compact"
    >
      <svg
        data-testid="delete-icon"
      />
      <p>
        Delete
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RecordActionsPopupContent Component renders correctly with default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb inKujX"
    variant="default"
  >
    <div
      class="sc-gtLWhw eVjNgn"
      variant="default"
    >
      <svg
        data-testid="edit-icon"
      />
      <p>
        Edit
      </p>
    </div>
    <div
      class="sc-gtLWhw eVjNgn"
      variant="default"
    >
      <svg
        data-testid="delete-icon"
      />
      <p>
        Delete
      </p>
    </div>
  </div>
</DocumentFragment>
`;
